--- a/style.css
+++ b/style.css
@@ -1,10 +1,51 @@
-html{
-    font-family: "Manrope",sans-serif;
-    width: 100%;
-    height: 100%;
+*{
+    font-family: "Manrope", serif;
     box-sizing: border-box;
-    margin: 0px;
 }
-#presentation-container{
-   
+body {
+   margin: 0%;
+}    
+header{
+    display: flex;
+    flex-direction:column;
+    justify-content: space-around;
+    border: 1px solid black;
+    padding: 40px 120px;
+    padding-left: 80px;
+    width: 1440px;
+    height: 754px;
+    background-image: url(/Assets/Background.svg);
+}
+#presentation{
+    top: 50%;
+}
+h1{
+    font-size: 55px;
+    font-weight: 800;
+}
+h2{
+    font-size: 48px;
+    font-weight: 800;
+    margin: 0;
+}
+button{
+    background-color: #F84646;
+    color: #fff;
+    font-size: 24px;
+    font-weight: 500;
+    padding: 15px 50px;
+    border-radius:8px;
+    border: none;
+    cursor: pointer;
+}
+#contatos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    flex-wrap:wrap;
+}
+#botao-contatos{
+    margin-top: 20px;
 }
