--- a/style.css
+++ b/style.css
@@ -176,44 +176,67 @@ button{
 }
 #companies-section{
     background-color: #F4F5F7;
+    padding:5rem 4rem;
 }
 #companies-text{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 4rem;
+}
+#companies-p{
+    font-size: 1.7rem;
+    font-weight: 500;
+    margin-top: 1.2rem;
 }
 #companies{
     display: grid;
     grid-template-columns:repeat(5,1fr);
     grid-template-rows: repeat(3, 1fr);
     align-items: center;
+    gap: 3rem;
+}
+.companies-style{
+    background-color: #fff;
+    text-align: center;
+    border-radius: 1rem;
 }
 #companie-1{
     grid-area: 3 / 1;
 }
 #companie-2{
     grid-area: 2/ 2;
+    padding-top: 0.5rem;
 }
 #companie-3{ 
     grid-area:3 / 2 ;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 #companie-4{
-    grid-area:3/3 ;
+    grid-area:1/3 ;
 }
 #companie-5{
     grid-area: 2/3;
 }
 #companie-6{
-    grid-area:1/3 ; 
+    grid-area:3/3 ;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 #companie-7{
-    grid-area:3/4 ;
+    grid-area:2/4;
+    padding-top: 0.5rem;
 }
 #companie-8{
-    grid-area: 2/4;
+    grid-area: 3/4;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 #companie-9{
-    grid-area: 3/5; 
+    grid-area: 3/5;
+    padding-top: 1.5rem;
+    padding-bottom: 1rem; 
 }
 footer{
     background-color: #F84646;
